<resources>
    <string name="app_name">RST Simplified</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">RST Simplified</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_page">RST Simplified</string>
    <string name="title_activity_services">Our Services</string>
    <string name="search_title">Search</string>
    <string name="title_activity_visa_services_options">Enter Details</string>
    <string name="title_activity_payment_gateway">Complete Payment</string>
    <string name="title_activity_visa_type_selection">Select Visa Type</string>
    <string name="title_activity_summary_page">Order Summary</string>
    <string name="upload_form_note">Note: You can skip this page by clicking on Submit button. you can submit documents later.</string>
    <string name="drawer_email">ashishkumar@rstintl.com</string>
    <string name="citizen">I am a citizen of</string>
    <string name="living">I am living in</string>
    <string name="address_friend">Address of your Friend</string>
    <string name="phone_friend">Phone No. of your Friend</string>
    <string name="name_friend">Name of your Friend</string>
    <string name="nric_friend">NRIC FIN No. of your Friend</string>
    <string name="address_relative">Address of your Relative</string>
    <string name="phone_relative">Phone No. of your Relative</string>
    <string name="name_relative">Name of your Relative</string>
    <string name="nric_relative">NRIC FIN No. of your Relative</string>
    <string name="address_kin">Address of your Next-of-Kin</string>
    <string name="phone_kin">Phone No. of your Next-of-Kin</string>
    <string name="name_kin">Name of your Next-of-Kin</string>
    <string name="nric_kin">NRIC FIN No. of your Next-of-Kin</string>
    <string name="visa">Select Visa For</string>
    <string name="usa_form_other_names">Have you ever used other names?</string>
    <string name="usa_form_telecode">Do you have telecode that repesents your name?</string>
    <string name="usa_form_birth_country">Place of Birth-Country region</string>
    <string name="usa_form_birth_state">Place of Birth-State/Province</string>
    <string name="usa_form_country">Country/Region of origin(Nationality)</string>
    <string name="usa_form_other_coutry">Do you hold or have you held any nationality other than the one indicated above on nationality?</string>
    <string name="usa_form_other_coutry_permanent">Are you a permanent resident of a country/region other than your country/region of origin (nationality) indicated above?</string>
    <string name="usa_form_national_identification_number">National Identification Number</string>
    <string name="usa_form_security_number">U.S. Social Security Number</string>
    <string name="usa_form_taxpayer_number">U.S. Tax Payer ID Number</string>
    <string name="usa_form_mailing_address">Is your Mailing Address the same as your Home Address?</string>
    <string name="usa_form_lost_passport">Have you ever lost a passport or had one stolen?</string>
    <string name="usa_form_document_type">Passport/Document Type</string>
    <string name="singapore_form_other_country">Did you reside in other countries, other than your country of origin, for one year or more during the last 5 years?</string>
    <string name="singapore_form_refused">Have you ever been refused entry into or deported from any country, including Singapore?</string>
    <string name="singapore_form_prohibited">Have you ever been prohibited from entering Singapore?</string>
    <string name="singapore_form_convicted">Have you ever been convicted in a court of law in any country, including Singapore?</string>
    <string name="singapore_form_diff_passport">Have you ever entered Singapore using a different passport or name?</string>
    <string name="iran_form_accompanying">No. of Persons Accompanying you to Iran</string>
    <string name="iran_form_border">Border of entry</string>
    <string name="iran_form_duration_stay">Duration of stay in Iran</string>
    <string name="iran_form_apply_visa">Where are you going to apply for your visa?</string>
    <string name="uae_visa_arrival_hint">Arrival Date in UAE</string>
    <string name="uae_visa_departure_hint">Departure Date from UAE</string>
    <string name="usa_visa_arrival_hint">Arrival Date in UAE</string>
    <string name="usa_visa_departure_hint">Departure Date from UAE</string>
    <string name="singapore_visa_arrival_hint">Arrival Date in UAE</string>
    <string name="singapore_visa_departure_hint">Departure Date from UAE</string>
    <string name="oman_visa_arrival_hint">Arrival Date in UAE</string>
    <string name="oman_visa_departure_hint">Departure Date from UAE</string>
    <string name="iran_visa_arrival_hint">Arrival Date in UAE</string>
    <string name="iran_visa_departure_hint">Departure Date from UAE</string>
    <string name="visited_iran">Have you visited to Iran before?</string>
    <string name="no_of_visit_iran">No. of visit to Iran</string>
    <string name="purpose_iran">Purpose of visit</string>
    <string name="last_visit_iran">Last visit of Iran</string>
    <string name="visa_no_iran">Visa No.</string>
    <string name="visit_date_iran">Visit Date</string>
    <string name="other_countries_visited">Which Countries have you travelled before?</string>
    <string name="previous_citizenship">If having previous citizenship or name, please mention?</string>
    <string name="usa_form6_purpose_trip">Purpose of trip to U.S.</string>
    <string name="length_stay_in_us">Intended length of stay in U.S.</string>
    <string name="no_of_months_us">No. of Months</string>
    <string name="no_of_weeks_us">No. of Weeks</string>
    <string name="no_of_days_us">No. of Days</string>
    <string name="address_stay_us">Address where you will stay in the United State</string>
    <string name="entity_paying">Person/Entity paying for your trip</string>
    <string name="other_person_travelling">Are there other persons travelling with you?</string>
    <string name="ever_been_us">Have you ever been in the U.S.?</string>
    <string name="ever_issued_visa_us">Have you ever been issued a U.S. Visa?</string>
    <string name="refused_us_visa">Have you ever been refused a U.S. Visa, or been refused admission to the United States, or withdrawn your application for admission at the port of entry?</string>
    <string name="contact_person_us">Contact Person or Organization in the United States</string>
    <string name="contact_person_name_us">Full Name</string>
    <string name="relation_with_person">Relationship to You</string>
    <string name="address_point">Address of Point of Contact</string>
    <string name="state_us">State</string>
    <string name="phone_no_us">Phone Number of Point of Contact</string>
    <string name="father_name">Father\'s Full Name</string>
    <string name="mother_name">Mother\'s Full Name</string>
    <string name="father_dob">Father\'s Date of Birth</string>
    <string name="mother_dob">Mother\'s Date of Birth</string>
    <string name="father_us">Is your Father in the U.S.?</string>
    <string name="mother_us">Is your Mother in the U.S.?</string>
    <string name="marital_status">Marital Status</string>
    <string name="occupation_us">Primary Occupation</string>
    <string name="employer_name">Present Employer or School Name</string>
    <string name="employer_address">Present Employer or School Address</string>
    <string name="country">Country Region</string>
    <string name="city">City</string>
    <string name="phone_no">Phone Number</string>
    <string name="duties">Briefly describe your duties</string>
    <string name="previous_employed">Were you previously employed?</string>
    <string name="languages">Provide a List of Languages You Speak</string>
    <string name="list_country_travelled">Have you traveled to any countries/regions within the last five years?</string>
    <string name="charitable_organisation">Have you belonged to, contributed to, or worked for any professional, social, or charitable organization?</string>
    <string name="specialized_skills">Do you have any specialized skills or training, such as firearms, explosives, nuclear, biological, or chemical experience?</string>
    <string name="served_military">Have you ever served in the military?</string>
    <string name="served_paramilitary">Have you ever served in, been a member of, or been involved with a paramilitary unit, vigilante unit, rebel group, guerrilla group, or insurgent organization?</string>
    <string name="note_usa_form">Provide the following security and background information. Provide complete and accurate answers to all questions that require an explanation. A visa may not be issued to persons who are within specific categories defined by law as inadmissible to the United States (except when a waiver is obtained in advance). Are any of the following applicable to you? While a YES answer does not automatically signify ineligibility for a visa, if you answer YES you may be required to personally appear before a consular officer.</string>
    <string name="usa_form_question1">Do you have a communicable disease of public health significance? (Communicable diseases of public significance include chancroid, gonorrhea, granuloma inguinale, infectious leprosy, lymphogranuloma venereum, infectious stage syphilis, active tuberculosis, and other diseases as determined by the Department of Health and Human Services.)</string>
    <string name="usa_form_question2">Do you have a mental or physical disorder that poses or is likely to pose a threat to the safety or welfare of yourself or others?</string>
    <string name="usa_form_question3">Are you or have you ever been a drug abuser or addict?</string>
    <string name="usa_form_question4">Have you ever been arrested or convicted for any offense or crime, even though subject of a pardon, amnesty, or other similar action?</string>
    <string name="usa_form_question5">Have you ever violated, or engaged in a conspiracy to violate, any law relating to controlled substances?</string>
    <string name="usa_form_question6">Have you ever been involved in, or do you seek to engage in, money laundering?</string>
    <string name="select_consulate">Select Consulate</string>
    <string name="consulate">Consulate</string>
    <string name="date_of_interview">Preferred Date of Interview</string>
    <string name="choice1">1st Priority</string>
    <string name="choice2">2nd Priority</string>
    <string name="choice3">3rd Priority</string>
    <string name="biometric_date">Preferred Date of Biometric Interview</string>
    <string name="delivery_address">Preferred Delivery Address</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="current_address">Current Address</string>
    <string name="place_birth">Place of Birth</string>
    <string name="state">State</string>
    <string name="country_form1">Country</string>
    <string name="passport_information">Passport Information</string>
    <string name="passport_number">Passport Number</string>
    <string name="city_issued">City where issued</string>
    <string name="country_issued">Country/Authority that issued Passport</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="stolen_passport">Have you ever lost a Passport or had one stolen?</string>
</resources>