<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nationality"
                android:id="@+id/current_nationality"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="5dp"
                android:layout_weight=".5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/colorAccent"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/spnr_usa_gender"
                    android:layout_weight="1">
                </android.support.v7.widget.AppCompatSpinner>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/marital_status"
                    android:textColor="@color/colorAccent"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/marital_status_form2"
                    android:layout_weight="1">
                </android.support.v7.widget.AppCompatSpinner>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:text="@string/current_address"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/current_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:id="@+id/current_city_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_birth"
                android:id="@+id/place_of_birth_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_us"
                android:id="@+id/current_state_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                android:id="@+id/postal_code_current"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_form1"
                android:id="@+id/current_country"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:text="@string/passport_information"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passport_number"
                android:id="@+id/passport_number_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_issued"
                android:id="@+id/city_issued_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_issued"
                android:id="@+id/country_issue_form2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/issue_date"
                    android:id="@+id/issue_date_form2"
                    android:inputType="date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiry_date"
                    android:id="@+id/expiry_date_form2"
                    android:inputType="date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stolen_passport"/>
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:id="@+id/stolen_passport"
                android:layout_height="wrap_content">
            </android.support.v7.widget.AppCompatSpinner>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:id="@+id/button_form2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="Save &amp; Submit"
            android:textColor="#fff"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>